# baby-plonk

./: .gitignore  Plonk.ipynb  README.md  curve.py  poly.py  poly_test.py  prover.py  pyproject.toml  setup.py  test.py  transcript.py  verifier.py
merlin/: merlin_transcript.py  strobe.py  test_merlin.py
tutorials/: Plonk.ipynb
tutorials/Understanding Plonk Protocol(CN)/: 1-plonk-arithmetization.ipynb
tutorials/understanding-plonk-cn/: 1-plonk-arithmetization.ipynb  2-plonk-lagrange-basis.ipynb  3-plonk-permutation.ipynb  4-plonk-constraints.ipynb  5-plonk-polycom.ipynb
workflows/: news.yml
